--- a/css/media.css
+++ b/css/media.css
@@ -25,7 +25,7 @@
 	}
 	@media (max-width: 1024px) {
 
-		.container { width: 80%; }
+		.container { width: 100%; }
 		.column { width: 100% !important; margin-bottom: 25px; }
 		.column:last-child { margin-bottom: 0; }
 		.tjenester { width: 100%; max-width: 530px; }
@@ -114,7 +114,7 @@
 
 	@media (max-width: 320px) {
 		.tjenester { width: 100%; max-width: 270px; }
-		.container { width: 80%; }
+		.container { width: 100%; }
 
 		.filters li {
 			display: block;
